--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,6 @@ markdown: redcarpet
 pygments: true
 include: ['_pages', '_posts']
 relative_permalinks: false
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
